# escher-deform-examples

./: .gitignore  CMakeLists.txt  README.md  anteater.cpp  lamp.cpp
get_stickers/: sticker_creator_anteater.py  sticker_creator_anteater_pattern.py  sticker_creator_anteater_tile.py  sticker_creator_anteater_tile_big.py  sticker_creator_lamp.py  sticker_creator_lamp_pattern.py  sticker_creator_lamp_tile.py  sticker_creator_lamp_tile_big.py
pattern_01_monsterXX/: CMakeLists.txt
pattern_02_lamp4star2/: CMakeLists.txt
